@@ -1,3 +1,8 @@
+2007-10-10  Kai Tietz  <kai.tietz@onevision.com>
+
+	* math.h: Add prototypes for nextafterl and ldexpl.
+	Add none inline declaration of ldexpf.
+
 2007-10-09  Kai Tietz  <kai.tietz@onevision.com>
 
 	* sys/stat.h, wstat.h: Changed POSIX prototypes.
